name: hackage-diff
version: 0.1.0.0
build-type: Simple
cabal-version: >= 1.10

executable hackage-diff
  main-is: Main.hs
  ghc-options: -Wall -Wunused-packages
  default-extensions: ImportQualifiedPost
  build-depends:
     base, http-conduit, process, containers
   , directory, filepath, bytestring
